<?xml version="1.0"?>
<package format="2">
  <name>leo_navigation</name>
  <version>0.3.0</version>
  <description>
    This package provides LeoRover navigation.
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>gmapping</exec_depend>

</package>